# framework

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-tests.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
neuragens/: teste_kernel.py
neuragens/kernel/: events.py  kernel.py  module_loader.py  plugin_interface.py
neuragens/ui/gradio/: gradio_listener.py  gradio_plugin.py
neuragens/ui/streamlit/: streamlit_listener.py  streamlit_plugin.py
